--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item 
+        android:id="@+id/item1" 
+        android:title="Scan"
+        android:showAsAction="always" 
+        android:visible="true"/>
 
 </menu>
